anchore/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anchore
  labels:
    name: anchore
